--- a/BurgerKingProject/src/main/webapp/static/Request_Page.html
+++ b/BurgerKingProject/src/main/webapp/static/Request_Page.html
@@ -18,13 +18,33 @@
 </style>
 </head>
 <body>
-	<form action="URL" method="get">
+	<!--
+		action 태그에 입력하는 것의 형태에 따라 작동하는 방법이 달라짐
+		
+		case 1: 요청URL
+			- 상대 경로 방식
+				현재 URL의 가장 마지막 / 뒤에 갑이 붙음
+		
+		case 2: http://www.google.com
+		
+		case 3: /bk/case3
+			- 절대 경로 방식
+	-->
+	<form action="/bk/order" method="get">
+		<span>주문할 개수 입력</span>
+		<input type="text" name="num" placeholder="숫자만 입력하세요.">
+		<input type="text" name="pName" placeholder="상품명을 입력하세요.">
 	
-	<span>주문할 개수 입력</span>
-	<input type="text" placeholder="숫자만 입력하세요.">
+		<button type="submit">발사!</button>
+	</form>
 	
-	<button type="submit">발사!</button>
-	
+	<form action="/bk/sign-up.do" method="post">
+		<legend>회원가입 양식</legend>
+		아이디: <input type="text" placeholder="아이디 입력" name="userId">
+		비밀번호: <input type="password" placeholder="비밀번호 입력" name="userPw">
+		이름: <input type="text" placeholder="이름 입력" name="userName">
+		
+		<button type="submit">회원가입</button>
 	</form>
 </body>
 </html>
